--- a/angular.json
+++ b/angular.json
@@ -79,6 +79,10 @@
           },
           "defaultConfiguration": "production"
         },
+
+
+
+        
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
@@ -88,6 +92,9 @@
             "development": {
               "browserTarget": "adminpro:build:development"
             }
+          },
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
           },
           "defaultConfiguration": "development"
         },
